# SA-KLQR

./: README.md  index.md
Datasets/: flat_0deg (1).csv  tilt_15deg.csv  tilt_30deg.csv  tilt_45deg.csv
data_collection_pkg/: CMakeLists.txt  package.xml
data_collection_pkg/launch/: data_collection.xml
data_collection_pkg/scripts/: data_logger.py
fsr_sensor_pkg/config/: fsr.yaml
fsr_sensor_pkg/launch/: fsr.xml
fsr_sensor_pkg/scripts/: fsr_serial_node.yaml
realsense_plane_pkg/: CMakeLists.txt  package.xml
realsense_plane_pkg/config/: CMakeLists.yaml
realsense_plane_pkg/launch/: plane_detector.xml
realsense_plane_pkg/scripts/: plane_detector.py
sa_klqr_controller/: CMakeLists.txt  package.xml
sa_klqr_controller/config/: controller.yaml
sa_klqr_controller/config/koopman_ops/: generate_koopman_placeholders.py
sa_klqr_controller/launch/: CMakeLists.txt  package.xml  sa_klqr_full.launch.py
sa_klqr_controller/scripts/: cartesian_wrapper.py  centroid_fuzzy.py  koopman_loader.py  lqr_gain.py  sa_klqr_node.py  state_builder.py
swab_orchestrator_pkg/: CMakeLists.txt  package.xml
swab_orchestrator_pkg/launch/: swab_full_system.xml
swab_orchestrator_pkg/scripts/: swab_manager.txt
utils_pkg/: CMakeLists.txt  package.xml
utils_pkg/scripts/: filters.py  math_utils.py
