<?xml version="1.0"?>
<package format="2">
  <name>data_collection_pkg</name>
  <version>0.0.1</version>
  <description>Data logging utilities for SA-KLQR swabbing system</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
