<?xml version="1.0"?>
<package format="2">
  <name>realsense_plane_pkg</name>
  <version>0.0.1</version>
  <description>Plane detection and surface tilt estimation using RealSense and Open3D</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

  <exec_depend>python3-open3d</exec_depend>

</package>
