<?xml version="1.0"?>
<package format="2">
  <name>swab_orchestrator_pkg</name>
  <version>0.0.1</version>
  <description>Orchestrator for full SA-KLQR swabbing pipeline</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
